<resources>
    <string name="app_name">Lab02AppRun</string>
    <string name="autenticacion">Autenticación</string>
    <string name="registrar">Registrar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_opciones">Menu de opciones</string>
    <string name="opcion_carrera">Carrera</string>
    <string name="opcion_perfil">Perfil de usuario</string>
    <string name="opcion_acerca">Acerca de</string>

    <!-- Strings dialog_importar_imagen -->
    <string name="galeria">Galeria</string>
    <string name="camara">Camara</string>
    <string name="salir">Salir</string>

    <!-- Strings activity_login -->
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="login_correo">Correo</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="accion_ingresar">Ingresar</string>
    <string name="accion_registrar">Registrar</string>
    <string name="accion_importar_imagen">Importar imagen</string>

    <!-- Strings activity_register -->
    <string name="register_nombre">Nombre</string>
    <string name="register_apellido">Apellido</string>
    <string name="register_correo">Correo</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_repita_contrasena">Repita contraseña</string>
    <string name="accion_cancelar">Cancelar</string>

    <!-- Strings errores -->
    <string name="error_correo_invalido">Este correo es invalido</string>
    <string name="error_correo_incorrecto">Este correo no ha sido registrado</string>
    <string name="error_correo_duplicado">El correo ya ha sido registrado</string>
    <string name="error_contrasena_invalida">Esta contraseña es muy corta</string>
    <string name="error_contrasena_no_iguales">Las contraseñas no son iguales</string>
    <string name="error_contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="error_campo_obligatorio">Este campo es obligatorio</string>

    <!-- Strings relacionados al fragment crear carrera-->
    <string name="edit_nombre">Nombre de la carrera: </string>
    <string name="edit_descripcion">Descripcion: </string>
    <string name="edit_distancia">Distancia: </string>
    <string name="edit_fecha">Fecha: </string>
    <string name="edit_lugar">Lugar: </string>
    <string name="txtView_fecha">Seleccione la fecha</string>
    <string name="edit_correoContacto">Correo del contacto</string>
    <string name="edit_telefonoContacto">Telefono del contacto</string>
    <string name="btn_crearCarrera">Crear carrera</string>

    <string name="texto_contacto">Hello blank fragment lista carrera</string>



    <!-- Strings perfil_fragment -->
    <string name="nombre_perfil">Nombre: </string>
    <string name="apellido_perfil">Apellido: </string>
    <string name="correo_perfil">Correo: </string>


    <!-- String acerca fragment -->
    <string name="integrantes_acerca">Integrantes</string>
    <string name="jhonatan">Jhonatan Alexander Orozco Blandon</string>
    <string name="yoiner">Yoiner Esteban Gomez Ayala</string>
    <string name="curso">Computacion movil</string>
    <string name="laboratorio">Laboratorio 2</string>
    <string name="profesor_valor">Sebastian Guzman</string>
    <string name="profesor">Profesor</string>
    <string name="año">2016</string>


</resources>
