<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="fill_parent">

    <Button
        android:onClick="galeriaClicked"
        android:id="@+id/btnGaleria"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="200dp"
        android:text="@string/galeria"/>

    <Button
        android:onClick="camaraClicked"
        android:id="@+id/btnTomarFoto"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="200dp"
        android:text="@string/camara"/>

    <Button
        android:onClick="salirClicked"
        android:id="@+id/btnSalir"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:text="@string/salir"/>
</RelativeLayout>